--- a/.github/workflows/pr-collab-jan19.yml
+++ b/.github/workflows/pr-collab-jan19.yml
@@ -11,7 +11,9 @@ permissions:
 jobs:
   pr_collab_snapshot:
     runs-on: ubuntu-latest
+
     steps:
+
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
@@ -19,10 +21,10 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Uses GitHub Search qualifiers: is:pr + created:DATE..DATE
           Q='repo:aemsites/idfc is:pr created:2026-01-01..2026-01-19'
+          ENCODED=$(echo "$Q" | sed 's/ /+/g')
           curl -s -H "Authorization: Bearer ${GH_TOKEN}" \
-            "https://api.github.com/search/issues?q=$(echo "$Q" | sed 's/ /+/g')&per_page=100" \
+            "https://api.github.com/search/issues?q=${ENCODED}&per_page=100" \
             > prs.json
 
       - name: Enrich with reviews/comments and compute core PR metrics
@@ -32,86 +34,66 @@ jobs:
         run: |
           jq -r '.items[].number' prs.json > pr_numbers.txt
 
-          # CSV of per-PR metrics
           echo "pr_number,created_at,merged_at,time_to_first_review_hours,time_to_merge_hours,reviewers_count,comments_count" > metrics.csv
-          # Review events (reviewer + state + submitted_at)
           echo -e "pr_number\treviewer\tstate\tsubmitted_at" > reviews.tsv
-          # Inline review comments (code review comments on diffs)
           echo -e "pr_number\treviewer\tcomment_id\tcreated_at" > review_code_comments.tsv
 
+          to_hours () {
+            python3 - "$@" << 'PY'
+import sys, datetime
+fmt="%Y-%m-%dT%H:%M:%SZ"
+a, b = sys.stdin.read().strip().split()
+if a == "null" or b == "null":
+    print("")
+else:
+    ta = datetime.datetime.strptime(a, fmt)
+    tb = datetime.datetime.strptime(b, fmt)
+    print(round((tb - ta).total_seconds() / 3600, 2))
+PY
+          }
+
           while read -r PR; do
-            ############################################
-            # Core PR details
-            ############################################
             PR_JSON=$(curl -s -H "Authorization: Bearer ${GH_TOKEN}" \
               "https://api.github.com/repos/aemsites/idfc/pulls/${PR}")
+
             CREATED=$(echo "$PR_JSON" | jq -r '.created_at')
             MERGED_AT=$(echo "$PR_JSON" | jq -r '.merged_at')
 
-            ############################################
-            # Reviews (review events: APPROVED / COMMENTED / CHANGES_REQUESTED)
-            ############################################
             REVIEWS=$(curl -s -H "Authorization: Bearer ${GH_TOKEN}" \
               "https://api.github.com/repos/aemsites/idfc/pulls/${PR}/reviews")
 
-            ############################################
-            # Issue-level discussion comments on the PR
-            ############################################
             COMMENTS=$(curl -s -H "Authorization: Bearer ${GH_TOKEN}" \
               "https://api.github.com/repos/aemsites/idfc/issues/${PR}/comments")
 
-            ############################################
-            # Inline code review comments (diff comments)
-            ############################################
             REVIEW_CODE_COMMENTS=$(curl -s -H "Authorization: Bearer ${GH_TOKEN}" \
               "https://api.github.com/repos/aemsites/idfc/pulls/${PR}/comments")
 
-            # First review timestamp (if any)
             FIRST_REVIEW=$(echo "$REVIEWS" | jq -r '.[].submitted_at' | sort | head -n1)
-            # Reviewers count (unique)
             REVIEWERS=$(echo "$REVIEWS" | jq -r '.[].user.login' | sort -u | wc -l)
-            # Issue-discussion comments count
             COMMENTS_COUNT=$(echo "$COMMENTS" | jq 'length')
-
-            # Time delta helper
-            to_hours () { python3 - << 'PY'
-import sys,datetime
-fmt="%Y-%m-%dT%H:%M:%SZ"
-a,b=sys.stdin.read().strip().split()
-if a=="null" or b=="null":
-    print("")
-else:
-    ta=datetime.datetime.strptime(a,fmt)
-    tb=datetime.datetime.strptime(b,fmt)
-    print(round((tb-ta).total_seconds()/3600,2))
-PY
-            }
 
             TFFR=$( (echo "$CREATED"; echo "${FIRST_REVIEW:-null}") | paste -sd' ' - | to_hours )
             TTM=$( (echo "$CREATED"; echo "${MERGED_AT:-null}") | paste -sd' ' - | to_hours )
 
             echo "${PR},${CREATED},${MERGED_AT},${TFFR},${TTM},${REVIEWERS},${COMMENTS_COUNT}" >> metrics.csv
 
-            # Append review rows (for reviewer-load aggregation)
             echo "$REVIEWS" \
               | jq -r --arg pr "$PR" '.[] | [$pr, .user.login, .state, .submitted_at] | @tsv' \
               >> reviews.tsv
 
-            # Append inline code review comments (for per-reviewer CRC aggregation)
             echo "$REVIEW_CODE_COMMENTS" \
               | jq -r --arg pr "$PR" '.[] | [$pr, .user.login, .id, .created_at] | @tsv' \
               >> review_code_comments.tsv
+
           done < pr_numbers.txt
 
       - name: Build reviewer-load table (incl. code review comments)
         shell: bash
         run: |
-          # Prepare header
-          echo "reviewer,prs_reviewed,total_reviews,approvals,changes_requested,comments,other,code_review_comments" > reviewer_load.csv
+          echo "reviewer,prs_reviewed,total_reviews,approvals,changes_requested,comments,other,code_review_comments" \
+            > reviewer_load.csv
 
-          # If there are no reviews, still proceed to aggregate code comments
           if [ -s reviews.tsv ]; then
-            # Aggregate review events into a temp table
             awk -F'\t' '
               NR>1 {
                 pr=$1; reviewer=$2; state=$3;
@@ -120,92 +102,29 @@ PY
                 else if (state=="CHANGES_REQUESTED") chg[reviewer]++
                 else if (state=="COMMENTED") comm[reviewer]++
                 else other[reviewer]++
-                key=reviewer "|" pr
+                key = reviewer "|" pr
                 if (!(key in seen)) { seen[key]=1; uniq[reviewer]++ }
               }
               END {
                 for (r in total) {
                   printf "%s,%d,%d,%d,%d,%d,%d,0\n", \
-                    r, (uniq[r]+0), (total[r]+0), (appr[r]+0), (chg[r]+0), (comm[r]+0), (other[r]+0)
+                    r, uniq[r]+0, total[r]+0, appr[r]+0, chg[r]+0, comm[r]+0, other[r]+0
                 }
-              }' reviews.tsv > reviewer_load.tmp
+              }
+            ' reviews.tsv > reviewer_load.tmp
           else
-            # No review events; create empty tmp
             : > reviewer_load.tmp
           fi
 
-          # Aggregate code-review (inline diff) comments per reviewer
           if [ -s review_code_comments.tsv ]; then
-            awk -F'\t' 'NR>1 {c[$2]++} END {for (r in c) printf "%s,%d\n", r, c[r]}' \
+            awk -F'\t' 'NR>1 { c[$2]++ } END { for (r in c) printf "%s,%d\n", r, c[r] }' \
               review_code_comments.tsv > crc_counts.csv
           else
             : > crc_counts.csv
           fi
 
-          # Merge: load crc counts; fill into reviewer_load.tmp rows; also add reviewers who only left code comments
           declare -A CRC
           while IFS=',' read -r r c; do
             [ -n "$r" ] && CRC["$r"]="$c"
           done < crc_counts.csv
 
-          declare -A SEEN
-          if [ -s reviewer_load.tmp ]; then
-            while IFS=',' read -r reviewer prs total appr chg comm other crc_placeholder; do
-              comments="${CRC[$reviewer]:-0}"
-              SEEN["$reviewer"]=1
-              echo "$reviewer,$prs,$total,$appr,$chg,$comm,$other,$comments" >> reviewer_load.csv
-            done < reviewer_load.tmp
-          fi
-
-          # Add reviewers who only left inline comments (no review events)
-          for r in "${!CRC[@]}"; do
-            if [ -z "${SEEN[$r]+x}" ]; then
-              echo "$r,0,0,0,0,0,0,${CRC[$r]}" >> reviewer_load.csv
-            fi
-          done
-
-      - name: Summarize stats and append reviewer-load section
-        shell: bash
-        run: |
-          echo "### PR Collaboration Snapshot (Jan 1–19, 2026)" > REPORT.md
-          echo "" >> REPORT.md
-          TOTAL=$(tail -n +2 metrics.csv | wc -l | xargs)
-          MERGED=$(tail -n +2 metrics.csv | awk -F, 'NF{ if ($3!="") c++ } END{print c+0}')
-          OPEN=$((TOTAL-MERGED))
-          echo "- **PRs created**: ${TOTAL}" >> REPORT.md
-          echo "- **Merged**: ${MERGED}" >> REPORT.md
-          echo "- **Still open**: ${OPEN}" >> REPORT.md
-
-          # Medians
-          awk -F, 'NR>1 && $4!="" {print $4}' metrics.csv | sort -n > tffr.txt || true
-          awk -F, 'NR>1 && $5!="" {print $5}' metrics.csv | sort -n > ttm.txt || true
-          MED_TFFR=$( [ -s tffr.txt ] && awk '{a[NR]=$1} END{ if (NR==0) print ""; else if (NR%2){print a[(NR+1)/2]} else {print (a[NR/2]+a[NR/2+1])/2} }' tffr.txt )
-          MED_TTM=$( [ -s ttm.txt ] && awk '{a[NR]=$1} END{ if (NR==0) print ""; else if (NR%2){print a[(NR+1)/2]} else {print (a[NR/2]+a[NR/2+1])/2} }' ttm.txt )
-          echo "- **Median time to first review**: ${MED_TFFR:-n/a} h" >> REPORT.md
-          echo "- **Median time to merge**: ${MED_TTM:-n/a} h" >> REPORT.md
-          echo "" >> REPORT.md
-
-          # Reviewer load (Top 10 by PRs reviewed, then total reviews)
-          if [ -s reviewer_load.csv ]; then
-            echo "#### Reviewer load (Jan 1–19, 2026)" >> REPORT.md
-            echo "" >> REPORT.md
-            echo "| Reviewer | PRs reviewed | Total reviews | Approvals | Changes requested | Comments | Other | Code‑review comments |" >> REPORT.md
-            echo "|---|---:|---:|---:|---:|---:|---:|---:|" >> REPORT.md
-            tail -n +2 reviewer_load.csv \
-              | sort -t, -k2,2nr -k3,3nr \
-              | head -n 10 \
-              | awk -F, '{printf "| %s | %s | %s | %s | %s | %s | %s | %s |\n", $1,$2,$3,$4,$5,$6,$7,$8 }' \
-              >> REPORT.md
-            echo "" >> REPORT.md
-          fi
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: pr-collab-jan1-19-2026
-          path: |
-            metrics.csv
-            reviews.tsv
-            review_code_comments.tsv
-            reviewer_load.csv
-            REPORT.md
