--- a/.github/workflows/pr-collab-jan19.yml
+++ b/.github/workflows/pr-collab-jan19.yml
@@ -15,22 +15,28 @@ jobs:
     steps:
 
       - name: Install jq
-        run: sudo apt-get update && sudo apt-get install -y jq
+        shell: bash
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
 
       - name: Fetch PRs created in window (Jan 1–19, 2026)
+        shell: bash
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          Q='repo:aemsites/idfc is:pr created:2026-01-01..2026-01-19'
+          Q="repo:aemsites/idfc is:pr created:2026-01-01..2026-01-19"
           ENCODED=$(echo "$Q" | sed 's/ /+/g')
-          curl -s -H "Authorization: Bearer ${GH_TOKEN}" \
+
+          curl -s \
+            -H "Authorization: Bearer ${GH_TOKEN}" \
             "https://api.github.com/search/issues?q=${ENCODED}&per_page=100" \
             > prs.json
 
       - name: Enrich with reviews/comments and compute core PR metrics
+        shell: bash
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        shell: bash
         run: |
           jq -r '.items[].number' prs.json > pr_numbers.txt
 
@@ -39,16 +45,16 @@ jobs:
           echo -e "pr_number\treviewer\tcomment_id\tcreated_at" > review_code_comments.tsv
 
           to_hours () {
-            python3 - "$@" << 'PY'
+            python3 << 'PY'
 import sys, datetime
 fmt="%Y-%m-%dT%H:%M:%SZ"
-a, b = sys.stdin.read().strip().split()
-if a == "null" or b == "null":
+data=sys.stdin.read().strip().split()
+if data[0]=="null" or data[1]=="null":
     print("")
 else:
-    ta = datetime.datetime.strptime(a, fmt)
-    tb = datetime.datetime.strptime(b, fmt)
-    print(round((tb - ta).total_seconds() / 3600, 2))
+    ta=datetime.datetime.strptime(data[0], fmt)
+    tb=datetime.datetime.strptime(data[1], fmt)
+    print(round((tb-ta).total_seconds()/3600,2))
 PY
           }
 
@@ -68,63 +74,10 @@ PY
             REVIEW_CODE_COMMENTS=$(curl -s -H "Authorization: Bearer ${GH_TOKEN}" \
               "https://api.github.com/repos/aemsites/idfc/pulls/${PR}/comments")
 
-            FIRST_REVIEW=$(echo "$REVIEWS" | jq -r '.[].submitted_at' | sort | head -n1)
+            FIRST_REVIEW=$(echo "$REVIEWS" | jq -r '.[].submitted_at' | sort | head -n 1)
             REVIEWERS=$(echo "$REVIEWS" | jq -r '.[].user.login' | sort -u | wc -l)
             COMMENTS_COUNT=$(echo "$COMMENTS" | jq 'length')
 
-            TFFR=$( (echo "$CREATED"; echo "${FIRST_REVIEW:-null}") | paste -sd' ' - | to_hours )
-            TTM=$( (echo "$CREATED"; echo "${MERGED_AT:-null}") | paste -sd' ' - | to_hours )
-
-            echo "${PR},${CREATED},${MERGED_AT},${TFFR},${TTM},${REVIEWERS},${COMMENTS_COUNT}" >> metrics.csv
-
-            echo "$REVIEWS" \
-              | jq -r --arg pr "$PR" '.[] | [$pr, .user.login, .state, .submitted_at] | @tsv' \
-              >> reviews.tsv
-
-            echo "$REVIEW_CODE_COMMENTS" \
-              | jq -r --arg pr "$PR" '.[] | [$pr, .user.login, .id, .created_at] | @tsv' \
-              >> review_code_comments.tsv
-
-          done < pr_numbers.txt
-
-      - name: Build reviewer-load table (incl. code review comments)
-        shell: bash
-        run: |
-          echo "reviewer,prs_reviewed,total_reviews,approvals,changes_requested,comments,other,code_review_comments" \
-            > reviewer_load.csv
-
-          if [ -s reviews.tsv ]; then
-            awk -F'\t' '
-              NR>1 {
-                pr=$1; reviewer=$2; state=$3;
-                total[reviewer]++
-                if (state=="APPROVED") appr[reviewer]++
-                else if (state=="CHANGES_REQUESTED") chg[reviewer]++
-                else if (state=="COMMENTED") comm[reviewer]++
-                else other[reviewer]++
-                key = reviewer "|" pr
-                if (!(key in seen)) { seen[key]=1; uniq[reviewer]++ }
-              }
-              END {
-                for (r in total) {
-                  printf "%s,%d,%d,%d,%d,%d,%d,0\n", \
-                    r, uniq[r]+0, total[r]+0, appr[r]+0, chg[r]+0, comm[r]+0, other[r]+0
-                }
-              }
-            ' reviews.tsv > reviewer_load.tmp
-          else
-            : > reviewer_load.tmp
-          fi
-
-          if [ -s review_code_comments.tsv ]; then
-            awk -F'\t' 'NR>1 { c[$2]++ } END { for (r in c) printf "%s,%d\n", r, c[r] }' \
-              review_code_comments.tsv > crc_counts.csv
-          else
-            : > crc_counts.csv
-          fi
-
-          declare -A CRC
-          while IFS=',' read -r r c; do
-            [ -n "$r" ] && CRC["$r"]="$c"
-          done < crc_counts.csv
+            TFFR=$(echo "$CREATED $FIRST_REVIEW" | to_hours)
+            TTM=$(echo "$CREATED $MERGED_AT" | to_hours)
 
