add sidekick-library.js to lintignore

--- a/.eslintignore
+++ b/.eslintignore
@@ -3,3 +3,4 @@ tools/**/*
 blocks/swipper/swipper-bundle.min.js
 scripts/swiperjs/swiper-bundle.min.js
 scripts/dompurify.min.js
+sidekick-library.js
