--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-json": "3.1.0",
+    "eslint-plugin-sonarjs": "^1.0.0",
     "eslint-plugin-xwalk": "github:adobe-rnd/eslint-plugin-xwalk#v0.1.3",
     "husky": "9.1.1",
     "merge-json-cli": "1.0.4",
