--- a/package.json
+++ b/package.json
@@ -26,17 +26,18 @@
   },
   "homepage": "https://github.com/adobe/aem-boilerplate#readme",
   "devDependencies": {
-    "@babel/eslint-parser": "7.25.9",
+    "@babel/eslint-parser": "7.28.0",
+    "chai": "5.0.0",
     "eslint": "8.57.1",
     "eslint-config-airbnb-base": "15.0.0",
-    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-import": "2.32.0",
     "eslint-plugin-json": "3.1.0",
     "eslint-plugin-sonarjs": "^1.0.0",
     "eslint-plugin-xwalk": "github:adobe-rnd/eslint-plugin-xwalk#v0.1.3",
     "husky": "9.1.1",
-    "merge-json-cli": "1.0.4",
-    "npm-run-all": "4.1.5",
-    "stylelint": "16.12.0",
-    "stylelint-config-standard": "36.0.1"
+    "merge-json-cli": "^1.0.4",
+    "npm-run-all": "^4.1.5",
+    "stylelint": "16.23.1",
+    "stylelint-config-standard": "39.0.0"
   }
 }
